=======================================================================
VERSION 0.2.10
=======================================================================

14-12-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/image/header.cpp:
      fix bug in transform re-jigging code to handle 45° oblique orientations

14-12-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/dicom/definitions.h:
      modify format_date() to (not) handle badly formatted date fields

09-12-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/average.cpp: fix -axis option again


02-11-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/mmap.cpp:
    * src/mrview/sidebar/tractography/track_list_item.h:
    * src/mrview/sidebar/tractography/track_list_item.cpp:
      avoid use of g_stat(), since it's not guaranteed to use 64-bit versions 
      of stat() even when available (as on CentOS).


09-11-2010 Robert Smith <r.smith@brain.org.au>
    * cmd/threshold.cpp: added -nonbinary output mode


=======================================================================
VERSION 0.2.9
=======================================================================


05-11-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/mradd.cpp: fix incorrect progressbar count, and handling of large
      numbers of input files.


25-10-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * src/mrview/slice.cpp: fix initial position of focus so that it is centered on a voxel


24-08-2010 Robert Smith <r.smith@brain.org.au>
    * cmd/tracks2prob.cpp:
      fix bug in handling of multiple contributions to a single voxel from a single track


04-08-2010 Robert Smith <r.smith@brain.org.au>
    * cmd/tracks2prob.cpp:
      reverted to previous interpretation of track 'density'
      (no scaling factor, finer interpolation & unary track->voxel contribution)

    * lib/point.h:
      added const qualifier to declaration of member function Point::cross()

